fdo#63378 Enable Impress Remote Dialog menu item for all view shells.

Change-Id: I47f040c1463b4be648d411c2f7f0070b8aed3e9c